--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
@@ -103,9 +103,9 @@
 				<div class="mui-input-row">
 					<label>供应商：</label>
 					<div class="pre">
-						<input class="newinput" type="text" placeholder="请选择供应商">
+						<input class="newinput" type="text" placeholder="关键字">
 						<span class="mui-icon mui-icon-closeempty" id="hideSpan"></span>
-						<div id="supplierNum" class="input_div" style="display: none;">
+						<div class="input_div" style="display: none;">
 							
 						</div>
 						<input class="savedata" type="hidden" value=''>
