--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -8,6 +8,73 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<style type="text/css">
+			.pre {
+				margin-bottom: 0;
+				padding-left: 0;
+				float: right;
+				width: 67%;
+			}
+			
+			#select {
+				top: 6px;
+				height: 50px;
+				width: 100%;
+			}
+			
+			.selectStyle {
+				margin: 0;
+			}
+			
+			.puSearchBtn {
+				margin: 60px auto;
+				width: 80%;
+			}
+			
+			.suppChoice {
+				padding: 5px;
+			}
+			
+			#inputselect {
+				width: 80%;
+				height: 50px;
+				position: relative;
+				top: -50px;
+				padding: 0;
+			}
+			
+			.newinput {
+				width: 150px;
+				padding: 2px 0px 2px 0px;
+				margin-bottom: -1px;
+				background: url(./thumb.jpg) no-repeat scroll right center;
+				border: 1px solid #ccc;
+				box-shadow: 0 1px 0 0 #eee inset;
+				cursor: default;
+			}
+			
+			.newinput:focus {
+				cursor: text;
+			}
+			
+			.input_div {
+				width: 150px;
+				border: 1px solid #ddd;
+				border-bottom: none;
+				border-radius: 0 0 3px 3px;
+				display: none;
+			}
+			
+			.soption {
+				display: block;
+				padding: 2px 5px;
+			}
+			
+			.soption:hover {
+				background: #f9f9f9;
+				border-top: 1px dotted #ddd;
+				border-bottom: 1px dotted #ddd;
+				padding: 1px 5px;
+			}
 			.mui-content div.content_part li {
 				padding: 0;
 				list-style: none;
@@ -71,10 +138,6 @@
 				right: 10px;
 				top: 6px;
 			}
-			/*.mui-input-group .mui-input-row {
-				border-radius: none;
-			}*/
-			
 			.mui-input-row>ul>li {
 				border-bottom: 1px solid #40ABE9;
 			}
@@ -101,13 +164,6 @@
 				font-size: 15px;
 			}
 			
-			.pre {
-				margin-bottom: 0;
-				padding-left: 0;
-				float: right;
-				width: 67%;
-			}
-			
 			.mui-content div.mui-row li {
 				padding: 5px;
 				list-style: none;
@@ -118,15 +174,15 @@
 				margin: 5px 0;
 			}
 			
-			.inputClassAdd {
+			.inputClass {
 				font-size: 10px;
 			}
 			
-			.inputClassAdd>label {
+			.inputClass>label {
 				padding: 0;
 			}
 			
-			.inputClassAdd>input {
+			.inputClass>input {
 				padding: 0;
 				font-size: 10px;
 			}
@@ -200,7 +256,7 @@
 						<div class="mui-col-sm-2 mui-col-xs-2"></div>
 						<div class="mui-col-sm-10 mui-col-xs-10">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>商品名称:</label>
 									<input type="text" class="mui-input-clear" id="" disabled>
 								</div>
@@ -211,7 +267,7 @@
 						<div class="mui-col-sm-2 mui-col-xs-2"></div>
 						<div class="mui-col-sm-5 mui-col-xs-5">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>品牌名称:</label>
 									<input type="text" class="mui-input-clear" id="" disabled>
 								</div>
@@ -219,7 +275,7 @@
 						</div>
 						<div class="mui-col-sm-5 mui-col-xs-5">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>工厂价:</label>
 									<input type="text" class="mui-input-clear" id="" disabled>
 								</div>
@@ -230,7 +286,7 @@
 						<div class="mui-col-sm-2 mui-col-xs-2"></div>
 						<div class="mui-col-sm-5 mui-col-xs-5">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>商品货号:</label>
 									<input type="text" class="mui-input-clear" id="" disabled>
 								</div>
@@ -238,7 +294,7 @@
 						</div>
 						<div class="mui-col-sm-5 mui-col-xs-5">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>申报数量:</label>
 									<input type="text" class="mui-input-clear" placeholder="请输入申报数量" id="">
 								</div>
@@ -255,7 +311,7 @@
 						<div class="mui-col-sm-2 mui-col-xs-2"></div>
 						<div class="mui-col-sm-10 mui-col-xs-10">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>商品名称:</label>
 									<input type="text" class="mui-input-clear" id="" disabled>
 								</div>
@@ -266,7 +322,7 @@
 						<div class="mui-col-sm-2 mui-col-xs-2"></div>
 						<div class="mui-col-sm-5 mui-col-xs-5">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>品牌名称:</label>
 									<input type="text" class="mui-input-clear" id="" disabled>
 								</div>
@@ -274,7 +330,7 @@
 						</div>
 						<div class="mui-col-sm-5 mui-col-xs-5">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>工厂价:</label>
 									<input type="text" class="mui-input-clear" id="" disabled>
 								</div>
@@ -285,7 +341,7 @@
 						<div class="mui-col-sm-2 mui-col-xs-2"></div>
 						<div class="mui-col-sm-5 mui-col-xs-5">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>商品货号:</label>
 									<input type="text" class="mui-input-clear" id="" disabled>
 								</div>
@@ -293,7 +349,7 @@
 						</div>
 						<div class="mui-col-sm-5 mui-col-xs-5">
 							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClassAdd">
+								<div class="mui-input-row inputClass">
 									<label>申报数量:</label>
 									<input type="text" class="mui-input-clear" placeholder="请输入申报数量" id="">
 								</div>
@@ -316,7 +372,7 @@
 					<div class="mui-col-sm-2 mui-col-xs-2"></div>
 					<div class="mui-col-sm-10 mui-col-xs-10">
 						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClassAdd">
+							<div class="mui-input-row inputClass">
 								<label>商品名称:</label>
 								<input type="text" class="mui-input-clear" id="" disabled>
 							</div>
@@ -327,7 +383,7 @@
 					<div class="mui-col-sm-2 mui-col-xs-2"></div>
 					<div class="mui-col-sm-5 mui-col-xs-5">
 						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClassAdd">
+							<div class="mui-input-row inputClass">
 								<label>品牌名称:</label>
 								<input type="text" class="mui-input-clear" id="" disabled>
 							</div>
@@ -335,7 +391,7 @@
 					</div>
 					<div class="mui-col-sm-5 mui-col-xs-5">
 						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClassAdd">
+							<div class="mui-input-row inputClass">
 								<label>工厂价:</label>
 								<input type="text" class="mui-input-clear" id="" disabled>
 							</div>
@@ -346,7 +402,7 @@
 					<div class="mui-col-sm-2 mui-col-xs-2"></div>
 					<div class="mui-col-sm-5 mui-col-xs-5">
 						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClassAdd">
+							<div class="mui-input-row inputClass">
 								<label>商品货号:</label>
 								<input type="text" class="mui-input-clear" id="" disabled>
 							</div>
@@ -354,7 +410,7 @@
 					</div>
 					<div class="mui-col-sm-5 mui-col-xs-5">
 						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClassAdd">
+							<div class="mui-input-row inputClass">
 								<label>申报数量:</label>
 								<input type="text" class="mui-input-clear" id="" disabled>
 							</div>
@@ -381,7 +437,7 @@
 				</div>
 			</div>
 			<div class="saveBtn">
-				<button id="" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
+				<button id="inSaveBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 			</div>
 		</div>
 		<input id="inStatus" name="inStatus" type="hidden" />
