--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -225,7 +225,7 @@
 			<div class="mui-input-row">
 				<label>采购中心：</label>
 				<div class="pre">
-					<input class="newinput" type="text" placeholder="请选择供应商">
+					<input class="newinput" type="text" placeholder="请选择采购中心">
 					<span class="mui-icon mui-icon-closeempty" id="hideSpanAdd"></span>
 					<div class="input_div" style="display: none;">
 
